--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://readthebytes.xyz
 languageCode: en-us
-title: My New Hugo Site
+title: ReadTheBytes
 theme: ["PaperMod"]
